Added pretraining param

--- a/random-network-distillation-pytorch-master/config.conf
+++ b/random-network-distillation-pytorch-master/config.conf
@@ -15,6 +15,7 @@ LearningRate = 1e-4
 NumEnv = 128
 NumStep = 128
 NumRollouts = 3000
+NumPretrainRollouts = 200
 Gamma = 0.999
 IntGamma = 0.99
 Lambda = 0.95
