Increased feature dimension

--- a/random-network-distillation-pytorch-master/config.conf
+++ b/random-network-distillation-pytorch-master/config.conf
@@ -38,6 +38,7 @@ ActionProb = 0.25
 UpdateProportion = 0.25
 LifeDone = False
 ObsNormStep = 50
+HiddenDim = 512
 
 [OPTIONS]
 EnvType = [atari, mario]
