--- a/random-network-distillation-pytorch-master/config.conf
+++ b/random-network-distillation-pytorch-master/config.conf
@@ -1,5 +1,5 @@
 [DEFAULT]
-TrainMethod = generative
+TrainMethod = GAN
 
 # EnvType = mario
 # EnvID = SuperMarioBros-v0
@@ -40,42 +40,5 @@ LifeDone = False
 ObsNormStep = 50
 HiddenDim = 512
 
-[GRID]
-TrainMethod = generative
-
-EnvType = grid
-EnvID = MiniGrid-FourRooms-v0
-MaxStepPerEpisode = 4500
-ExtCoef = 2.
-
-LearningRate = 1e-4
-NumEnv = 128
-NumStep = 128
-NumRollouts = 0
-NumPretrainRollouts = 200
-Gamma = 0.999
-IntGamma = 0.99
-Lambda = 0.95
-StableEps = 1e-8
-StateStackSize = 4
-PreProcHeight = 84
-ProProcWidth = 84
-UseGAE = True
-UseGPU = True
-UseNorm = False
-UseNoisyNet = False
-ClipGradNorm = 0.5
-Entropy = 0.001
-Epoch = 20
-MiniBatch = 4
-PPOEps = 0.1
-IntCoef = 1.
-StickyAction = False
-ActionProb = 0.25
-UpdateProportion = 1.00
-LifeDone = False
-ObsNormStep = 50
-HiddenDim = 512
-
 [OPTIONS]
-EnvType = [atari, mario, grid]
+EnvType = [atari, mario]
