--- a/random-network-distillation-pytorch-master/config.conf
+++ b/random-network-distillation-pytorch-master/config.conf
@@ -30,7 +30,7 @@ UseNoisyNet = False
 ClipGradNorm = 0.5
 Entropy = 0.001
 Epoch = 4
-MiniBatch = 4
+MiniBatch = 256 # You can change it, I use 2080ti, so I can not choose it so small
 PPOEps = 0.1
 IntCoef = 1.
 StickyAction = True
@@ -38,7 +38,7 @@ ActionProb = 0.25
 UpdateProportion = 1.00
 LifeDone = False
 ObsNormStep = 50
-HiddenDim = 100
+HiddenDim = 1024
 
 [OPTIONS]
 EnvType = [atari, mario]
