--- a/random-network-distillation-pytorch-master/config.conf
+++ b/random-network-distillation-pytorch-master/config.conf
@@ -1,11 +1,6 @@
 [DEFAULT]
 TrainMethod = generative
 
-# EnvType = mario
-# EnvID = SuperMarioBros-v0
-# MaxStepPerEpisode = 18000
-# ExtCoef = 5.
-
 EnvType = atari
 EnvID = MontezumaRevengeNoFrameskip-v4
 MaxStepPerEpisode = 4500
@@ -15,7 +10,7 @@ LearningRate = 1e-4
 NumEnv = 128
 NumStep = 128
 NumRollouts = 0
-NumPretrainRollouts = 200
+NumPretrainRollouts = 400
 Gamma = 0.999
 IntGamma = 0.99
 Lambda = 0.95
@@ -30,7 +25,7 @@ UseNoisyNet = False
 ClipGradNorm = 0.5
 Entropy = 0.001
 Epoch = 4
-MiniBatch = 4
+MiniBatch = 16
 PPOEps = 0.1
 IntCoef = 1.
 StickyAction = True
@@ -39,6 +34,7 @@ UpdateProportion = 1.00
 LifeDone = False
 ObsNormStep = 50
 HiddenDim = 512
+UseDisc = True
 
 [GRID]
 TrainMethod = generative
