--- a/random-network-distillation-pytorch-master/config.conf
+++ b/random-network-distillation-pytorch-master/config.conf
@@ -1,5 +1,5 @@
 [DEFAULT]
-TrainMethod = GAN
+TrainMethod = RND
 
 # EnvType = mario
 # EnvID = SuperMarioBros-v0
@@ -30,7 +30,7 @@ UseNoisyNet = False
 ClipGradNorm = 0.5
 Entropy = 0.001
 Epoch = 4
-MiniBatch = 256 # You can change it, I use 2080ti, so I can not choose it so small
+MiniBatch = 256
 PPOEps = 0.1
 IntCoef = 1.
 StickyAction = True
