--- a/random-network-distillation-pytorch-master/environment.yml
+++ b/random-network-distillation-pytorch-master/environment.yml
@@ -25,7 +25,6 @@ dependencies:
   - mkl_random=1.1.0=py36hd6b4f25_0
   - ncurses=6.2=he6710b0_0
   - ninja=1.9.0=py36hfd86e86_0
-  - numpy-base=1.18.1=py36hde5b4d6_1
   - olefile=0.46=py36_0
   - openssl=1.1.1e=h7b6447c_0
   - pillow=7.0.0=py36hb39fc2d_0
@@ -43,18 +42,37 @@ dependencies:
   - zlib=1.2.11=h7b6447c_3
   - zstd=1.3.7=h0b5b093_0
   - pip:
+    - absl-py==0.9.0
     - atari-py==0.2.6
+    - cachetools==4.1.0
+    - chardet==3.0.4
     - cloudpickle==1.3.0
     - future==0.18.2
+    - google-auth==1.13.1
+    - google-auth-oauthlib==0.4.1
+    - grpcio==1.28.1
     - gym==0.17.1
+    - gym-minigrid==1.0.1
     - gym-super-mario-bros==7.3.0
+    - idna==2.9
+    - markdown==3.2.1
     - nes-py==8.1.1
     - numpy==1.18.2
+    - oauthlib==3.1.0
     - opencv-python==4.2.0.32
     - protobuf==3.11.3
+    - pyasn1==0.4.8
+    - pyasn1-modules==0.2.8
     - pyglet==1.5.0
+    - requests==2.23.0
+    - requests-oauthlib==1.3.0
+    - rsa==4.0
     - scipy==1.4.1
+    - tensorboard==2.2.0
+    - tensorboard-plugin-wit==1.6.0.post3
     - tensorboardx==2.0
     - tqdm==4.44.0
+    - urllib3==1.25.8
+    - werkzeug==1.0.1
 prefix: /home/chris/.conda/envs/curiosity
 
