--- a/new_gan_1/config.conf
+++ b/new_gan_1/config.conf
@@ -1,3 +1,6 @@
+[DEFAULT]
+TrainMethod = GAN
+
 # EnvType = mario
 # EnvID = SuperMarioBros-v0
 # MaxStepPerEpisode = 18000
@@ -27,7 +30,7 @@ UseNoisyNet = False
 ClipGradNorm = 0.5
 Entropy = 0.001
 Epoch = 4
-MiniBatch = 16
+MiniBatch = 8
 PPOEps = 0.1
 IntCoef = 1.
 StickyAction = True
@@ -35,7 +38,7 @@ ActionProb = 0.25
 UpdateProportion = 1.00
 LifeDone = False
 ObsNormStep = 50
-HiddenDim = 1024
+HiddenDim = 512
 
 [OPTIONS]
 EnvType = [atari, mario]
