--- a/random-network-distillation-pytorch-master/config.conf
+++ b/random-network-distillation-pytorch-master/config.conf
@@ -1,5 +1,5 @@
 [DEFAULT]
-TrainMethod = generative
+TrainMethod = RND
 
 # EnvType = mario
 # EnvID = SuperMarioBros-v0
@@ -14,8 +14,7 @@ ExtCoef = 2.
 LearningRate = 1e-4
 NumEnv = 128
 NumStep = 128
-NumRollouts = 0
-NumPretrainRollouts = 200
+NumRollouts = 12000
 Gamma = 0.999
 IntGamma = 0.99
 Lambda = 0.95
@@ -35,10 +34,9 @@ PPOEps = 0.1
 IntCoef = 1.
 StickyAction = True
 ActionProb = 0.25
-UpdateProportion = 1.00
+UpdateProportion = 0.25
 LifeDone = False
 ObsNormStep = 50
-HiddenDim = 512
 
 [GRID]
 TrainMethod = generative
