More complex RND

--- a/random-network-distillation-pytorch-master/config.conf
+++ b/random-network-distillation-pytorch-master/config.conf
@@ -29,7 +29,7 @@ UseNoisyNet = False
 ClipGradNorm = 0.5
 Entropy = 0.001
 Epoch = 4
-MiniBatch = 4
+MiniBatch = 16
 PPOEps = 0.1
 IntCoef = 1.
 StickyAction = True
@@ -37,6 +37,7 @@ ActionProb = 0.25
 UpdateProportion = 0.25
 LifeDone = False
 ObsNormStep = 50
+HiddenDim = 1024
 
 [GRID]
 TrainMethod = generative
