--- a/random-network-distillation-pytorch-master/config.conf
+++ b/random-network-distillation-pytorch-master/config.conf
@@ -7,7 +7,7 @@ TrainMethod = RND
 # ExtCoef = 5.
 
 EnvType = atari
-EnvID = MontezumaRevengeNoFrameskip-v4
+EnvID = VentureNoFrameskip-v4
 MaxStepPerEpisode = 4500
 ExtCoef = 2.
 
