--- a/random-network-distillation-pytorch-master/config.conf
+++ b/random-network-distillation-pytorch-master/config.conf
@@ -2,14 +2,14 @@
 TrainMethod = generative
 
 EnvType = atari
-EnvID = MontezumaRevengeNoFrameskip-v4
+EnvID = VentureNoFrameskip-v4
 MaxStepPerEpisode = 4500
 ExtCoef = 2.
 
 LearningRate = 1e-4
 NumEnv = 128
 NumStep = 128
-NumRollouts = 2000
+NumRollouts = 1450
 NumPretrainRollouts = 50
 Gamma = 0.999
 IntGamma = 0.99
@@ -25,7 +25,7 @@ UseNoisyNet = False
 ClipGradNorm = 0.5
 Entropy = 0.001
 Epoch = 4
-MiniBatch = 8
+MiniBatch = 16
 PPOEps = 0.1
 IntCoef = 1.
 StickyAction = True
@@ -66,6 +66,43 @@ MiniBatch = 4
 PPOEps = 0.1
 IntCoef = 1.
 StickyAction = False
+ActionProb = 0.25
+UpdateProportion = 1.00
+LifeDone = False
+ObsNormStep = 50
+HiddenDim = 512
+
+[TEMP]
+TrainMethod = generative
+
+EnvType = atari
+EnvID = MontezumaRevengeNoFrameskip-v4
+MaxStepPerEpisode = 4500
+ExtCoef = 2.
+
+LearningRate = 1e-4
+NumEnv = 128
+NumStep = 128
+NumRollouts = 1450
+NumPretrainRollouts = 50
+Gamma = 0.999
+IntGamma = 0.99
+Lambda = 0.95
+StableEps = 1e-8
+StateStackSize = 4
+PreProcHeight = 84
+ProProcWidth = 84
+UseGAE = True
+UseGPU = True
+UseNorm = False
+UseNoisyNet = False
+ClipGradNorm = 0.5
+Entropy = 0.001
+Epoch = 4
+MiniBatch = 16
+PPOEps = 0.1
+IntCoef = 1.
+StickyAction = True
 ActionProb = 0.25
 UpdateProportion = 1.00
 LifeDone = False
