--- a/random-network-distillation-pytorch-master/config.conf
+++ b/random-network-distillation-pytorch-master/config.conf
@@ -2,7 +2,7 @@
 TrainMethod = generative
 
 EnvType = atari
-EnvID = VentureNoFrameskip-v4
+EnvID = MontezumaRevengeNoFrameskip-v4
 MaxStepPerEpisode = 4500
 ExtCoef = 2.
 
